welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:5: error: reassignment to val
    if (lookingFor = nums(i)) {
                   ^indexOfValue:9: error: not found: value i
  return i
         ^